--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 8081
 
+spring:
+  redis:
+    host: 81.70.160.238
+    port: 35800
+
 sa-token:
   # token 名称（同时也是 cookie 名称）
   token-name: ACCESS-TOKEN
