--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ sa-token:
   # token 名称（同时也是 cookie 名称）
   token-name: ACCESS-TOKEN
   # token 有效期（单位：秒） 默认30天，-1 代表永久有效
-  timeout: 7200
+#  timeout: 7200
   # 是否允许同一账号多地同时登录 （为 true 时允许一起登录, 为 false 时新登录挤掉旧登录）
   is-concurrent: true
   # 在多人登录同一账号时，是否共用一个 token （为 true 时所有登录共用一个 token, 为 false 时每次登录新建一个 token）
